# AI-In-Action

./: README.md
application/rag/Evaluation/llm-base-rag-eval/: README.md  requirements.txt
application/rag/Evaluation/llm-base-rag-eval/src/: __init__.py  answer_correctness.py  answer_fathfulness.py  answer_similarity.py  context_entities_recall.py  context_precision.py  context_recall.py
llm/transformers/: Positional Encoding.ipynb
llm/transformers/.ipynb_checkpoints/: Positional Encoding-checkpoint.ipynb
multi-agent-crewai/: README.md
multi-agent-crewai/multi_tool_agent/: README.md  pyproject.toml  report.md
multi-agent-crewai/multi_tool_agent/db/: chroma.sqlite3
multi-agent-crewai/multi_tool_agent/src/multi_tool_agent/: crew.py  main.py
multi-agent-crewai/multi_tool_agent/src/multi_tool_agent/config/: agents.yaml  tasks.yaml
