[project]
name = "multi_tool_agent"
version = "0.1.0"
description = "multi_tool_agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
multi_tool_agent = "multi_tool_agent.main:run"
run_crew = "multi_tool_agent.main:run"
train = "multi_tool_agent.main:train"
replay = "multi_tool_agent.main:replay"
test = "multi_tool_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
